// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledInfoList rendered correctly 1`] = `
<body>
  <div>
    <ul
      class="sc-bwzfXH kkRSrs"
    >
      <li
        class="sc-htpNat hCuCUW"
      >
        Time:
        <span>
          3
          :
          00
        </span>
      </li>
      <li
        class="sc-htpNat hCuCUW"
      >
        Words Per Minute:
        <span
          class="sc-bdVaJa eBZPoX"
        >
          0
           WPM
        </span>
      </li>
    </ul>
  </div>
</body>
`;

exports[`StyledInfoList rendered correctly after time is up 1`] = `
<body>
  <div>
    <ul
      class="sc-bwzfXH kkRSrs"
    >
      <li
        class="sc-htpNat hCuCUW"
      >
        Time:
        <span>
          0
          :
          00
        </span>
      </li>
      <li
        class="sc-htpNat hCuCUW"
      >
        Words Per Minute:
        <span
          class="sc-bdVaJa eDGlOc"
        >
          30
           WPM
        </span>
      </li>
      <li
        class="sc-htpNat hCuCUW"
      >
        Completion Percentage:
        <span>
          80
          %
        </span>
      </li>
      <li
        class="sc-htpNat hCuCUW"
      >
        Find your record 
        <a
          data-testid="recordLink"
          href="/history/xyz"
        >
          here
        </a>
      </li>
    </ul>
  </div>
</body>
`;
